package ar.edu.davinci.dv_ds_20242c_g13.strategy;

import java.math.BigDecimal;

public interface EstadoPrendaStrategy {
	 BigDecimal obtenerPrecioVenta(BigDecimal precioBase);

}
