@startuml
Title Diagrama Clase Tienda Ropita con Strategy
class Prenda {
	descripcion
	TipoPrenda
	precioBase
	EstadoPrenda
	EstadoPrendaStrategy
	
	+ setEstadoPrenda()
	+ precioVenta()
	- asignarEstrategia()
}
note right of Prenda::precioVenta
precioVenta = EstadoPrendaStrategy.precioVenta()
end note
note right of Prenda::setEstadoPrenda
asignarEstragegia
end note
note right of Prenda::asignarEstrategia
si EstadoPrenda es NUEVA asignar PrendaNueva
sino si EstadoPrenda es PROMOCION asignar PrendaPromocion
sino si EstadoPrenda es LIQUIDACION asignar PrendaLiquidacion
end note
interface EstadoPrendaStrategy {
	precioVenta()
}
class PrendaNueva {
	precioVenta()
}
note bottom of PrendaNueva
precioVenta = en este caso no modifican el precio base.
end note
class PrendaPromocion {
	precioVenta()
}
note bottom of PrendaPromocion
precioVenta = Le resta un valor fijo decidido por el usuario.
end note
class PrendaLiquidacion {
	precioVenta()
}
note bottom of PrendaLiquidacion
precioVenta = Es un 50% del valor del producto.
end note
enum TipoPrenda {
	SACO
	CAMISA
	PANTALON
}
enum EstadoPrenda {
	NUEVA
	PROMOCION
	LIQUIDACION
}
class Venta {
	fecha
	Cliente
	ItemVenta
	TotalVenta
}
class ItemVenta {
	Prenda
	cantidad
	precioVentaFinal
}
class Cliente {
	nombre
}
Prenda --down TipoPrenda
Prenda --down EstadoPrenda
Prenda --left EstadoPrendaStrategy
EstadoPrendaStrategy <|-- PrendaNueva
EstadoPrendaStrategy <|-- PrendaPromocion
EstadoPrendaStrategy <|-- PrendaLiquidacion
Venta -- Cliente
Venta -- ItemVenta
ItemVenta -- Prenda
@enduml
